--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.2.4",
+    "gsap": "^3.12.5",
+    "install": "^0.13.0",
+    "locomotive-scroll": "^5.0.0-beta.12",
+    "next": "14.2.3",
+    "npm": "^10.8.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "sass": "^1.77.2"
   },
   "devDependencies": {
     "eslint": "^8",
